styles.css
body {
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
}


.top-background, .footer {
    background-color: #1F2937;
    color: white;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 16px;
}

.links, .subtext {
    font-size: 18px;
    color: #E5E7EB;
}

a {
    text-decoration: none;
    color: white;
}

.header {
    display: flex;
    padding: 4px;
    align-items: center;
    margin-right: 300px;
    margin-left: 300px;
}

.links {
    margin-left: auto;
}

.logo {
    font-size: 24px;
    font-weight: bold;
}

h1 {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
    margin-bottom: 8px;
    margin-top: 8px;
}
.hero {
    display: flex;
    align-items: flex-start;
    margin-top: 50px;
    margin-left: 300px;
    margin-right: 300px;
    margin-bottom: 100px;
}

.hero-content {
    flex: 1;
}

.top-background {
    display: flex;
    flex-direction: column;
}

.sign-up {
    background-color: #3882F6;
    color: white;
    border: 1px solid #3882F6;
    border-radius: 5px;
    padding: 4px;
    margin-top: 8px;
    width: 90px;
}

.resize {
    width: 450px;
    height: auto;
    margin-left: 1em;
    order: 1;
}

.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    padding: 24px;
}

h2 {
    text-align: center;
    font-size: 36px;
    font-weight: bolder;
}

.information-container {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 16px;
    font-weight: lighter;
}

.info-images {
    width: 100px;
    height: 100px;
}

.info {
    max-width: 200px;
}

.inspiration {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 200px;
    padding-bottom: 200px;
}

.quote {
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
}

.quote-by {
    font-size: 26px;
    font-weight: bold;
    font-style: normal;
    padding-top: 16px;
}

.call-to-action {
    background-color: #3882F6;
    color: white;
    width: 950px;
    display: flex;
    align-items: flex-start;
    border-radius: 5px;
    padding: 48px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 100px;
}

.action {
    flex: 1;
}

.action-sign-up {
    background-color: #3882F6;
    color: white;
    border: 2px solid white;
    border-radius: 5px;
    padding: 4px;
    width: 90px;
    margin-left: 1em;
    order: 1;
}

.action-text-1 {
    font-weight: bold;
    font-size: 20px;
}

